First candidate version

--- a/doc/anteproyecto/main.bib
+++ b/doc/anteproyecto/main.bib
@@ -21,15 +21,25 @@
   address = 	 {Natick, MA, USA},
 }
 
-@InBook{Greiner99,
-  author = 	 {Greiner, R.},
+@InBook{EIoT2Talk13,
+  author = 	 {Alessandro Bassi Martin Bauer Martin Fiedler Thorsten Kramp Rob van Kranenburg Sebastian Lange and Stefan Meissner},
   ALTeditor = 	 {},
-  title = 	 {The Encyclopedia of Cognitive Science},
-  chapter = 	 {Explanation-based learning},
-  publisher = 	 {MIT Press},
-  year = 	 {1999},
+  title = 	 {Enabling Things to Talk},
+  chapter = 	 {Introduction to the Internet of Things},
+  publisher = 	 {Springer Berlin Heidelberg},
+  year = 	 {2013},
+  pages = 	 {1-10},
+}
+
+@InBook{Example,
+  author = 	 {Alessandro Bassi, Martin Bauer, Martin Fiedler, Thorsten Kramp, Rob van Kranenburg, Sebastian Lange, Stefan Meissner},
+  ALTeditor = 	 {},
+  title = 	 {Enabling Things to Talk},
+  chapter = 	 {Introduction to the Internet of Things},
+  publisher = 	 {Springer Berlin Heidelberg},
+  year = 	 {2013},
   address = 	 {Cambridge, MA, USA.},
-  pages = 	 {301-303},
+  pages = 	 {1-10},
 }
 
 @InProceedings{Frohlic00,
