--- a/doc/anteproyecto/main.tex
+++ b/doc/anteproyecto/main.tex
@@ -2,8 +2,7 @@
 \usepackage{url}
 %\showhelp  % comenta o borra para eliminar ayudas
 
-\title{Sense: Hub de datos de alto rendimiento y escalabilidad para
-  tecnologias `Internet of Things`.}
+\title{Sense: Plataforma de alto rendimiento para captura y procesado de eventos IoT}
 \author{David Martín García}
 \advisorFirst{David Villa Alises}
 \advisorDepartment{Tecnologias y sistemas de información}
